[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/items/VHS.gd" type="Script" id=1]
[ext_resource path="res://assets/VHS/vhs_0.png" type="Texture" id=2]
[ext_resource path="res://assets/VHS/cover_0.png" type="Texture" id=3]
[ext_resource path="res://assets/font/SimpleFont.fnt" type="BitmapFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 17 )

[node name="VHS" type="Area2D"]
scale = Vector2( 3, 3 )
z_index = 5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="VHS_Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Cover_Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="DayLabel" type="Label" parent="Cover_Sprite"]
margin_left = -4.0
margin_top = -0.666667
margin_right = 12.0
margin_bottom = 11.3333
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 4 )
text = "01"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonthLabel" type="Label" parent="Cover_Sprite"]
margin_left = -4.0
margin_top = 5.33333
margin_right = 12.0
margin_bottom = 17.3333
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 4 )
text = "01"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
